--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,105 @@ body {
     margin: 0;
 }
 
-header {
-    background-color: #5f29a3;
-    padding: 45px 0;
+/*typography*/
+h1, h3 {
+    margin: 0;
 }
 
 h1 {
     font-size: 36px;
     color: whitesmoke;
-    margin: 0;
 }
+
+h2 {
+    margin-top: 0;
+}
+
 h3 {
     font-size: 20px;
     color: #d0aaff;
-    margin: 0;
+}
+
+p {
+    line-height: 23px;
+}
+
+/*links*/
+a {
+    color: #ef5839;
+    text-decoration: underline dotted;
+}
+
+a:active, a:hover {
+    color: #d4b44c;
+}
+
+/*buttons*/
+
+.btn {
+    padding: 10px 19px;
+    border-radius: 4.6px;
+    font-weight: 500;
+    text-decoration: none;
+    display: inline-block;
+    margin: 10px;
+}
+
+.btn-dark {
+    color: whitesmoke;
+    background-color: #5f29a3;
+}
+
+.btn-mid {
+    color: #5f29a3;
+    background-color: #f0e0ff;
+}
+
+.btn-light {
+    color: #5f29a3;
+    background-color: whitesmoke;
+}
+
+.btn:hover, .btn:active {
+    color: #2b283a;
+    background-color: #f3e885;
+}
+
+/*layout*/
+header,
+section,
+footer {
+    padding: 45px 0;
+}
+
+header, .section-two {
+    background-color: #5f29a3;
+}
+
+.section-two {
+    color: whitesmoke;
+}
+
+.container {
+    width: 620px;
+    margin: 0 auto;
+}
+
+.sneakers {
+    width: 100%;
+}
+
+.feature-image {
+    width: 300px;
+    border-radius: 4.6px;
+}
+
+.section-two-image-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+footer {
+    color: #5f29a3;
+    text-align: center;
 }
